--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 coreapi==2.3.3
 coreschema==0.0.4
+dj-rest-auth==2.2.3
 Django==3.2.8
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.1.0
 drf-yasg==1.20.0
 idna==3.3
 inflection==0.5.1
@@ -12,6 +14,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.1.1
 packaging==21.3
+PyJWT==2.3.0
 pyparsing==3.0.7
 pytz==2021.3
 requests==2.27.1
